Changement sur un bug email verification

--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -123,10 +123,7 @@
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Aperiam asperiores assumenda beatae dolorum incidunt quasi suscipit tenetur.
-                        Architecto enim error fugit, itaque labore omnis quidem repudiandae sint velit voluptatem
-                        voluptates.
+                        Description...
                     </p>
                 </div>
             </div>
