--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -122,9 +122,19 @@
                     </a>
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <p>
-                        Description...
-                    </p>
+                    <div align="left">
+                        Pourquoi le CnamBot ? C'est parti d'un simple projet de ChatBot en Python,
+                        avec mes amis Ammar et Corentin, puis une fois qu'il fonctionnait,
+                        je me suis dit que ce serait sympathique de pouvoir l'utiliser au quotidien
+                        et je croyais vraiment qu'il pourrait être utile.<br>
+                        Alors j'ai eu envie de pousser le bouchon plus loin et d'en faire un site pour la promotion 4 BDIA.
+                        Le projet pourrait même s'étendre à plusieurs promotions,
+                        il y aurait alors deux trois éléments à modifier mais c'est tout à fait faisable.<br>
+                        En dessous il y a la section des contributeurs au projet.<br>
+                        Pour l'instant, il n'y a que mes amis avec qui le CnamBot est né,
+                        mais n'hésitez pas à me faire part de vos idées, je vous ajouterai sur le git.<br>
+                        Je trouverai génial d'intégrer les idées de chacun au projet !
+                    </div>
                 </div>
             </div>
         </div>
