Changement sur un bug email verification

--- a/templates/login.html
+++ b/templates/login.html
@@ -79,7 +79,7 @@
                                                     <input type="email" name="signup_email" class="form-style"
                                                            placeholder="Adresse email CNAM" id="signup_email"
                                                            title="Une adresse auditeur du CNAM ressemble à : prenom.nom.auditeur@lecnam.net"
-                                                           pattern="[\w]{1,}[.]{1}[\w]{1,}[.]{1}auditeur@lecnam.net"
+                                                           pattern="[\w-]{1,}[.][\w-]{1,}[.]auditeur@lecnam.net"
                                                            autocomplete="off" required>
                                                     <i class="input-icon uil uil-at"></i>
                                                 </div>
