--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -81,7 +81,7 @@
                          alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Cnambot</h4>
+                    <h4 class="chatbox__heading--header">CnamBot</h4>
                     <p class="chatbox__description--header">CNAMIEN, viens causer, je peux peut-être t'aider !</p>
                 </div>
             </div>
@@ -107,42 +107,39 @@
 <!-- Footer-->
 <footer class="footer text-center">
     <div class="container">
-        <div id="admin" style="margin-bottom:50px">
+        <div id="admin" class="mb-lg-5">
             <h3 class="text-uppercase">L'admin du site</h3>
             <br><br>
             <div class="row justify-content-center">
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-4 mb-5 mb-lg-0 align-self-center">
                     <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
                          alt="avatar-max"/>
                     <h4 class="mb-4">Max</h4>
-                    <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
+                    <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/" target="_blank">
                         <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}"
                              alt="linkedin-max"
                              style="width:32px;height:32px">
                     </a>
                 </div>
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <div align="left">
-                        Pourquoi le CnamBot ? C'est parti d'un simple projet de ChatBot en Python,
+                <div class="col-lg-4 mb-5 mb-lg-0 align-self-center">
+                    <p align="left">
+                        Pourquoi le <b>CnamBot</b> ? C'est parti d'un simple projet de <b>ChatBot en Python</b>,
                         avec mes amis Ammar et Corentin, puis une fois qu'il fonctionnait,
                         je me suis dit que ce serait sympathique de pouvoir l'utiliser au quotidien
                         et je croyais vraiment qu'il pourrait être utile.<br>
-                        Alors j'ai eu envie de pousser le bouchon plus loin et d'en faire un site pour la promotion 4 BDIA.
+                        Alors j'ai eu envie de pousser le bouchon plus loin et d'en faire un site pour la <b>promotion 4
+                        BDIA</b>.
                         Le projet pourrait même s'étendre à plusieurs promotions,
-                        il y aurait alors deux trois éléments à modifier mais c'est tout à fait faisable.<br>
-                        En dessous il y a la section des contributeurs au projet.<br>
+                        il y aurait alors deux trois éléments à modifier mais c'est tout à fait faisable.<br><br>
+                        En dessous, il y a la section des <b>contributeurs</b> au projet.<br>
                         Pour l'instant, il n'y a que mes amis avec qui le CnamBot est né,
-                        mais n'hésitez pas à me faire part de vos idées, je vous ajouterai sur le git.<br>
+                        mais n'hésitez pas à me faire part de vos idées, je vous ajouterai sur le git.<br><br>
                         Je trouverai génial d'intégrer les idées de chacun au projet !
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-            <div class="divider-custom-line"></div>
-        </div>
+        <div class="border-top my-3 mb-lg-5"></div>
         <div id="contributors">
             <h3 class="text-uppercase">Les contributeurs</h3>
             <br><br>
@@ -151,7 +148,7 @@
                     <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
                          alt="avatar-coco"/>
                     <h4 class="mb-4">Corentin</h4>
-                    <a href="https://www.linkedin.com/in/corentin-gr%C3%A9goire-27141b1ba">
+                    <a href="https://www.linkedin.com/in/corentin-gr%C3%A9goire-27141b1ba" target="_blank">
                         <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-corentin"
                              style="width:32px;height:32px">
                     </a>
@@ -160,7 +157,7 @@
                     <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
                          alt="avatar-ammar"/>
                     <h4 class="mb-4">Ammar</h4>
-                    <a href="https://fr.linkedin.com/in/ammar-kheder-a37053193">
+                    <a href="https://fr.linkedin.com/in/ammar-kheder-a37053193" target="_blank">
                         <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
                              style="width:32px;height:32px">
                     </a>
