--- a/templates/home.html
+++ b/templates/home.html
@@ -32,13 +32,29 @@
                     </div>
                 </div>
                 <!-- Item 2-->
+                <div class="col-md-6 col-lg-4 mb-5 align-self-center">
+                    <div class="portfolio-item mx-auto">
+                        <a href="https://geoguessr.com" target="_blank">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white">
+                                    <i class="fas fa-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img class="img-fluid"
+                                 src="{{ url_for('static', filename='./assets/img/menu/geoguessr.png') }}"
+                                 alt="chess-menu"/>
+                        </a>
+                    </div>
+                </div>
+                <!-- Item 3-->
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="{{ url_for('static', filename='./assets/img/menu/chess.webp') }}"
+                        <img class="img-fluid"
+                             src="{{ url_for('static', filename='./assets/img/menu/coming-soon.webp') }}"
                              alt="chess-menu"/>
                     </div>
                 </div>
